chore: fixed overflow in cards and added/improved new content in services, projects, and products.

--- a/styles.css
+++ b/styles.css
@@ -329,6 +329,7 @@ section {
   display: flex;
   transition: transform 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   gap: 1.5rem;
+  padding: 30px;
 }
 
 .carousel-controls {
